# ai-agency

./: .gitignore
01_calendar_reminder/: .dockerignore  .env.example  Dockerfile.backend  Dockerfile.frontend  README.md  create-zip.sh  current_month_events.json  docker-compose.yml  requirements.txt
01_calendar_reminder/_frontend/: index.html  package-lock.json  package.json  vite.config.ts
01_calendar_reminder/backend/: main.py  requirements.txt  telegram.py
01_calendar_reminder/backend/calendar_crew/: README.md  pyproject.toml
01_calendar_reminder/backend/calendar_crew/src/calendar_crew/: crew.py  main.py
01_calendar_reminder/backend/calendar_crew/src/calendar_crew/config/: agents.yaml  tasks.yaml
01_calendar_reminder/backend/calendar_crew/src/calendar_crew/tools/: custom_tool.py  delete_event_tool.py  select_events_tool.py  update_event_tool.py
02_newsletter_voice/: README.md  __init__.py  main.py  services.py
02_voice_agent/: config.py  services.py  voice_agent.py
03_reels_editor/: MONITOR_README.md  fastapi_server.py  file_monitor.py  requirements.txt  start_monitor.py
03_reels_editor/submagic_flow/: README.md  pyproject.toml
03_reels_editor/submagic_flow/src/submagic_flow/: main.py  submagic_project.py
05_11labs_voice_agent/: main.py  requirements_webhook.txt  start_webhook_server.py  webhook_server.py
06_crm_patrice/: client_monitor.py  client_refactoring_monitory.py  config.py  content_monitor.py  get_metrics_for_the_day.py  get_spreadsheet_calendar_daily_metrics.py
06_crm_patrice/database/: logging_service.py
(+33 files in other folders)
