[project]
name = "submagic_flow"
version = "0.1.0"
description = "submagic_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0",
]

[project.scripts]
kickoff = "submagic_flow.main:kickoff"
run_crew = "submagic_flow.main:kickoff"
plot = "submagic_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
