[project]
name = "calendar_crew"
version = "0.1.0"
description = "calendar_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
calendar_crew = "calendar_crew.main:run"
run_crew = "calendar_crew.main:run"
train = "calendar_crew.main:train"
replay = "calendar_crew.main:replay"
test = "calendar_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
